src/app/component/eco-news/components/news-list/news-list-list-view/news-list-list-view.component.scss
p,
div {
  margin: 0;
  padding: 0;
}

#list-gallery-content {
  display: flex;
  width: 1140px;
  max-height: 199px;
  box-shadow: 1px 1px 12px rgba(27, 51, 38, 0.15);
  border-radius: 4px;
  background: #fff;

  .list-image-content {
    border-radius: 4px;
    width: 359px;
    height: 199px;
  }

  .news-content {
    flex-grow: 1;
    position: relative;
    margin: 28px 24px 24px;

    .added-data {
      .ul-eco-buttons {
        opacity: 0.8;
        font-family: opensans, sans-serif;
        font-size: 14px;
        line-height: 16px;
        color: #13aa57;
        display: inline-block;
        margin: 0 16px 0 0;
        text-transform: uppercase;
      }

      .word-wrap {
        word-break: break-word;
      }
    }

    .title-list {
      overflow: hidden;
      max-height: 128px;
      margin: 8px 0 0 0;
      font-family: 'Montserrat', sans-serif;
      font-style: normal;
      font-weight: 500;
      font-size: 21px;
      line-height: 26px;
      color: #313131;
    }

    .list-text {
      overflow: hidden;
      max-height: 52px;
      margin: 8px 0 0 0;
      font-family: 'Open Sans', sans-serif;
      font-size: 14px;
      line-height: 23px;
      color: #313131;
      white-space: pre-wrap;
    }

    .user-data-added-news {
      display: flex;
      flex-wrap: wrap;
      position: absolute;
      bottom: 0;

      .user-data-text-date {
        margin-right: 16px;
        font-family: 'Open Sans', sans-serif;
        font-size: 14px;
        line-height: 21px;
        color: #666;
        mix-blend-mode: normal;
        opacity: 0.6;

        .icon {
          align-items: center;
          margin-right: 4px;
        }
      }

      .user-data-text-date:nth-child(2) {
        max-height: 26px;
        display: block;
        white-space: nowrap;
        max-width: 91px;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }
  }
}

#list-gallery-content:hover {
  background: #fff;
  box-shadow: 0 4px 32px #e6ebea;
  border-radius: 4px;
  cursor: pointer;
}

@media screen and (max-width: 1199px) {
  #list-gallery-content {
    width: 960px;
    height: 166px;
    padding: auto 32px;

    .list-image-content {
      width: 299px;
      height: 171px;
    }
  }

  .list-text {
    display: none;
  }

  .title-list {
    max-width: 613px;
  }

  .user-data-added-news {
    min-width: 322px;
  }
}

@media screen and (max-width: 991px) {
  #list-gallery-content {
    width: 742px;
    height: 191px;

    .list-image-content {
      width: 214px;
      height: 191px;
      object-fit: cover;
    }
  }

  .user-data-added-news {
    min-width: 322px;
  }

  .user-data-text-date:nth-child(2) {
    max-height: 26px;
    display: block;
    white-space: nowrap;
    max-width: 120px;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

@media screen and (max-width: 767px) {
  #list-gallery-content {
    width: 548px;
    height: 185px;

    .list-image-content {
      display: none;
    }

    .title-list {
      font-size: 18px;
      line-height: 24px;
    }
  }
}

